syntax = "proto3";

option csharp_namespace = "GrpcService1";

service Customer
{
	rpc GetCustomerInfo(CustomerLookupModel) returns (CustomerModel);
}

message CustomerLookupModel{
	int32 userId = 1; //bool int32 float double string // number relates to order
}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}

// Check props of file always 